Fixed color contrast issues on all pages; fixed button issues on cities page

--- a/css/citiesmain.css
+++ b/css/citiesmain.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #e28c40;
+  background-color: #df7c26;
   font-family: "times new roman", sans-serif;
 }
 .bigsection {
@@ -9,20 +9,21 @@ body {
   font-size: 24px;
 }
 
-p a {
-  color: #0B5345;
-}
-
 .smallsection ul, .smallsection p, .smallsection i {
   font-size: 18px;
 }
-
 
 .disclaimer{
   font-size= 4px;
 }
 
 .expandable {
+  display: none
+}
+.showbutton {
+  display: inline;
+}
+.hidebutton {
   display: none
 }
 * {box-sizing:border-box}
@@ -46,7 +47,6 @@ p a {
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: white;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -71,7 +71,6 @@ p a {
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
@@ -82,7 +81,6 @@ p a {
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
