--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
   body {
-  background-color: #e28c40;
+  background-color: #df7c26;
   font-family: "times new roman", sans-serif;
 }
 .bigsection {
@@ -41,7 +41,6 @@
   width: auto;
   margin-top: -22px;
   padding: 16px;
-  color: white;
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
@@ -66,7 +65,6 @@
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
   font-size: 15px;
   padding: 8px 12px;
   position: absolute;
@@ -77,7 +75,6 @@
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
