--- a/css/survey.css
+++ b/css/survey.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #e28c40;
+  background-color: #df7c26;
   font-family: "times new roman", sans-serif;
 }
 .bigsection {
